@@ -1,3 +1,9 @@
+2006-11-09  Bruno Haible  <bruno@clisp.org>
+
+	* subtypep.lisp (indefinite-subclassp): New function.
+	(STANDARD-OBJECT): Use it.
+	Fixes bug #[ 1591671 ].
+
 2006-11-09  Jörg Höhle  <hoehle@users.sourceforge.net>
 
 	* stream.d (finish_tty_output) [UNIX]: try fsync(), tcdrain() or
